Fix alignment of titles on index page

--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -10,3 +10,13 @@
   justify-content: space-between;
   align-items: center;
 }
+
+.footerSocialMedia {
+  display: flex;
+  justify-content: flex-end;
+
+  li {
+    padding-right: 0px;
+    padding-left: 10px;
+  }
+}
