--- a/styles/SocialMedia.module.scss
+++ b/styles/SocialMedia.module.scss
@@ -1,10 +1,10 @@
 .socialMediaIcon {
   width: 24px;
   height: 24px;
-  opacity: 60%;
+  opacity: 100%;
   transition: var(--transition);
 }
 
 .socialMediaIconHovered {
-  opacity: 90%;
+  opacity: 75%;
 }
